Flesh out enrollment spec scenarios

--- a/Solutions/Marain.TenantManagement.Specs/Marain.TenantManagement.Specs.csproj
+++ b/Solutions/Marain.TenantManagement.Specs/Marain.TenantManagement.Specs.csproj
@@ -40,8 +40,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Data\ServiceManifests\FooBarServiceManifest.jsonc" />
-    <None Remove="Data\ServiceManifests\LegacyV2\FooBarServiceManifest.jsonc" />
+    <None Remove="Data\ServiceManifests\LegacyV2\ServiceManifest0D1C.jsonc" />
     <None Remove="Data\ServiceManifests\LegacyV2\ManifestWithConfiguration.jsonc" />
     <None Remove="Data\ServiceManifests\LegacyV2\ManifestWithConfigurationWithUnknownContentType.jsonc" />
     <None Remove="Data\ServiceManifests\LegacyV2\ManifestWithDependencies.jsonc" />
@@ -54,17 +53,23 @@
     <None Remove="Data\ServiceManifests\ManifestWithConfigurationWithUnknownContentType.jsonc" />
     <None Remove="Data\ServiceManifests\ManifestWithDependencies.jsonc" />
     <None Remove="Data\ServiceManifests\ManifestWithMultipleConfigurationItems.jsonc" />
-    <None Remove="Data\ServiceManifests\OperationsServiceManifest.jsonc" />
-    <None Remove="Data\ServiceManifests\SimpleManifestWithNoDependenciesOrConfiguration.jsonc" />
+    <None Remove="Data\ServiceManifests\ServiceManifestC0D().jsonc" />
+    <None Remove="Data\ServiceManifests\ServiceManifestC0D(C0D()).jsonc" />
+    <None Remove="Data\ServiceManifests\ServiceManifestC0D(C0D(C0D())).jsonc" />
+    <None Remove="Data\ServiceManifests\ServiceManifestC0D(C1D()).jsonc" />
+    <None Remove="Data\ServiceManifests\ServiceManifestC1D().jsonc" />
+    <None Remove="Data\ServiceManifests\ServiceManifestC1D(C0D()).jsonc" />
+    <None Remove="Data\ServiceManifests\ServiceManifestC1D(C1D()).jsonc" />
+    <None Remove="Data\ServiceManifests\ServiceManifestC1D(C1D(C1D())).jsonc" />
     <None Remove="Data\ServiceManifests\WorkflowServiceManifest.jsonc" />
   </ItemGroup>
 
   <ItemGroup>
+    <SpecFlowObsoleteCodeBehindFiles Remove="Features\Enrollment\RequiredConfiguration\EnrollSupplyingRequiredConfiguration - Copy.feature.cs" />
     <SpecFlowObsoleteCodeBehindFiles Remove="Features\ServiceManifests\Validation\CommonPropertyValidation - Copy.feature.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Data\ServiceManifests\LegacyV2\V3ServiceWithV2MigrationSupportManifest.jsonc" />
-    <EmbeddedResource Include="Data\ServiceManifests\LegacyV2\FooBarServiceManifest.jsonc" />
     <EmbeddedResource Include="Data\ServiceManifests\LegacyV2\ManifestWithConfiguration.jsonc" />
     <EmbeddedResource Include="Data\ServiceManifests\LegacyV2\ManifestWithConfigurationWithUnknownContentType.jsonc" />
     <EmbeddedResource Include="Data\ServiceManifests\LegacyV2\ManifestWithDependencies.jsonc" />
@@ -73,12 +78,17 @@
     <EmbeddedResource Include="Data\ServiceManifests\LegacyV2\SimpleManifestWithNoDependenciesOrConfiguration.jsonc" />
     <EmbeddedResource Include="Data\ServiceManifests\LegacyV2\WorkflowServiceManifest.jsonc" />
     <EmbeddedResource Include="Data\ServiceManifests\ManifestWithConfigurationWithUnknownContentType.jsonc" />
+    <EmbeddedResource Include="Data\ServiceManifests\ServiceManifestC0D%28C0D%28%29%29.jsonc" />
     <EmbeddedResource Include="Data\ServiceManifests\ManifestWithMultipleConfigurationItems.jsonc" />
     <EmbeddedResource Include="Data\ServiceManifests\ManifestWithConfiguration.jsonc" />
     <EmbeddedResource Include="Data\ServiceManifests\ManifestWithDependencies.jsonc" />
-    <EmbeddedResource Include="Data\ServiceManifests\FooBarServiceManifest.jsonc" />
-    <EmbeddedResource Include="Data\ServiceManifests\OperationsServiceManifest.jsonc" />
-    <EmbeddedResource Include="Data\ServiceManifests\SimpleManifestWithNoDependenciesOrConfiguration.jsonc" />
+    <EmbeddedResource Include="Data\ServiceManifests\ServiceManifestC0D%28C0D%28C0D%28%29%29%29.jsonc" />
+    <EmbeddedResource Include="Data\ServiceManifests\ServiceManifestC1D%28C1D%28C1D%28%29%29%29.jsonc" />
+    <EmbeddedResource Include="Data\ServiceManifests\ServiceManifestC1D%28%29.jsonc" />
+    <EmbeddedResource Include="Data\ServiceManifests\ServiceManifestC1D%28C1D%28%29%29.jsonc" />
+    <EmbeddedResource Include="Data\ServiceManifests\ServiceManifestC0D%28%29.jsonc" />
+    <EmbeddedResource Include="Data\ServiceManifests\ServiceManifestC0D%28C1D%28%29%29.jsonc" />
+    <EmbeddedResource Include="Data\ServiceManifests\ServiceManifestC1D%28C0D%28%29%29.jsonc" />
     <EmbeddedResource Include="Data\ServiceManifests\WorkflowServiceManifest.jsonc" />
   </ItemGroup>
   <ItemGroup>
@@ -106,6 +116,10 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <SpecFlowFeatureFiles Update="Features\Enrollment\RequiredConfiguration\EnrollSupplyingWrongConfiguration.feature">
+      <Visible>$(UsingMicrosoftNETSdk)</Visible>
+      <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
+    </SpecFlowFeatureFiles>
     <SpecFlowFeatureFiles Update="Features\ServiceManifests\Validation\DependentServiceValidation.feature">
       <Visible>$(UsingMicrosoftNETSdk)</Visible>
       <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
