--- a/Solutions/Marain.TenantManagement.Specs/Data/ServiceManifests/LegacyV2/SvcC3V3orV2D().jsonc
+++ b/Solutions/Marain.TenantManagement.Specs/Data/ServiceManifests/LegacyV2/SvcC3V3orV2D().jsonc
@@ -7,19 +7,19 @@
     {
       "contentType": "application/vnd.marain.tenancy.servicemanifests.requiredconfigurationentries.azureblobstorage.v3",
       "key": "V3WithV2Migration:BlobContainerConfiguration:myblobs",
-      "SupportsLegacyV2Configuration": true,
+      "legacyV2Key": "StorageConfiguration__mycontainer",
       "description": "Stores blobs"
     },
     {
       "contentType": "application/vnd.marain.tenancy.servicemanifests.requiredconfigurationentries.cosmosdb.v3",
       "key": "V3WithV2Migration:CosmosContainerConfiguration:mycontainer",
-      "SupportsLegacyV2Configuration": true,
+      "legacyV2Key": "StorageConfiguration__mydb__mycontainer",
       "description": "Stores docs"
     },
     {
       "contentType": "application/vnd.marain.tenancy.servicemanifests.requiredconfigurationentries.azuretablestorage.v3",
       "key": "V3WithV2Migration:TableConfiguration:mytable",
-      "SupportsLegacyV2Configuration": true,
+      "legacyV2Key": "StorageConfiguration__mytable",
       "description": "Stores rows"
     }
   ]
