--- a/Solutions/Marain.TenantManagement.Specs/Marain.TenantManagement.Specs.csproj
+++ b/Solutions/Marain.TenantManagement.Specs/Marain.TenantManagement.Specs.csproj
@@ -40,30 +40,33 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Data\ServiceManifests\LegacyV2\ServiceManifest0D1C.jsonc" />
-    <None Remove="Data\ServiceManifests\LegacyV2\SvcC3V3orV2D().jsonc" />
-    <None Remove="Data\ServiceManifests\ManifestWithConfiguration.jsonc" />
-    <None Remove="Data\ServiceManifests\ManifestWithConfigurationWithUnknownContentType.jsonc" />
-    <None Remove="Data\ServiceManifests\ManifestWithDependencies.jsonc" />
-    <None Remove="Data\ServiceManifests\ManifestWithMultipleConfigurationItems.jsonc" />
-    <None Remove="Data\ServiceManifests\ServiceManifestC0D().jsonc" />
-    <None Remove="Data\ServiceManifests\ServiceManifestC0D(C0D()).jsonc" />
-    <None Remove="Data\ServiceManifests\ServiceManifestC0D(C0D(C0D())).jsonc" />
-    <None Remove="Data\ServiceManifests\ServiceManifestC0D(C1D()).jsonc" />
-    <None Remove="Data\ServiceManifests\ServiceManifestC1D().jsonc" />
-    <None Remove="Data\ServiceManifests\ServiceManifestC1D(C0D()).jsonc" />
-    <None Remove="Data\ServiceManifests\ServiceManifestC1D(C1D()).jsonc" />
-    <None Remove="Data\ServiceManifests\ServiceManifestC3D().jsonc" />
-    <None Remove="Data\ServiceManifests\ServiceManifestC3D(C1D(C1D())).jsonc" />
-    <None Remove="Data\ServiceManifests\WorkflowServiceManifest.jsonc" />
+    <PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
+    <PackageReference Include="Corvus.Testing.SpecFlow.NUnit" Version="1.4.11" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Marain.Services.Tenancy.Testing\Marain.Services.Tenancy.Testing.csproj" />
+    <ProjectReference Include="..\Marain.TenantManagement.Azure.BlobStorage\Marain.TenantManagement.Azure.BlobStorage.csproj" />
+    <ProjectReference Include="..\Marain.TenantManagement.Azure.Cosmos\Marain.TenantManagement.Azure.Cosmos.csproj" />
+    <ProjectReference Include="..\Marain.TenantManagement.Azure.TableStorage\Marain.TenantManagement.Azure.TableStorage.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <SpecFlowObsoleteCodeBehindFiles Remove="Features\Enrollment\RequiredConfiguration\EnrollSupplyingRequiredConfiguration - Copy.feature.cs" />
-    <SpecFlowObsoleteCodeBehindFiles Remove="Features\ServiceManifests\Validation\CommonPropertyValidation - Copy.feature.cs" />
-  </ItemGroup>
-  <ItemGroup>
+    <EmbeddedResource Include="Data\ServiceManifests\LegacyV2\SvcC1D%28C1V3orV2D%28%29%29.jsonc" />
+    <EmbeddedResource Include="Data\ServiceManifests\LegacyV2\SvcC1D%28C1V2D%28%29%29.jsonc" />
+    <EmbeddedResource Include="Data\ServiceManifests\LegacyV2\SvcC1V2D%28C1V2D%28%29%29.jsonc" />
+    <EmbeddedResource Include="Data\ServiceManifests\LegacyV2\SvcC1V2D%28%29.jsonc" />
+    <EmbeddedResource Include="Data\ServiceManifests\LegacyV2\SvcC1V2D%28C1V3orV2D%28%29%29.jsonc" />
+    <EmbeddedResource Include="Data\ServiceManifests\LegacyV2\SvcC1V2D%28C1D%28%29%29.jsonc" />
+    <EmbeddedResource Include="Data\ServiceManifests\LegacyV2\SvcC1V3orV2D%28C1V3orV2D%28%29%29.jsonc" />
+    <EmbeddedResource Include="Data\ServiceManifests\LegacyV2\SvcC1V3orV2D%28C1V2D%28%29%29.jsonc" />
+    <EmbeddedResource Include="Data\ServiceManifests\LegacyV2\SvcC1V3orV2D%28C1D%28%29%29.jsonc" />
     <EmbeddedResource Include="Data\ServiceManifests\LegacyV2\SvcC3V3orV2D%28%29.jsonc" />
+    <EmbeddedResource Include="Data\ServiceManifests\LegacyV2\SvcC3V2D%28%29.jsonc" />
+    <EmbeddedResource Include="Data\ServiceManifests\LegacyV2\SvcC1V3orV2D%28%29.jsonc" />
     <EmbeddedResource Include="Data\ServiceManifests\ManifestWithConfigurationWithUnknownContentType.jsonc" />
     <EmbeddedResource Include="Data\ServiceManifests\ServiceManifestC0D%28C0D%28%29%29.jsonc" />
     <EmbeddedResource Include="Data\ServiceManifests\ManifestWithMultipleConfigurationItems.jsonc" />
@@ -79,58 +82,10 @@
     <EmbeddedResource Include="Data\ServiceManifests\ServiceManifestC1D%28C0D%28%29%29.jsonc" />
     <EmbeddedResource Include="Data\ServiceManifests\WorkflowServiceManifest.jsonc" />
   </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
-    <PackageReference Include="Corvus.Testing.SpecFlow.NUnit" Version="1.4.11" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Marain.Services.Tenancy.Testing\Marain.Services.Tenancy.Testing.csproj" />
-    <ProjectReference Include="..\Marain.TenantManagement.Azure.BlobStorage\Marain.TenantManagement.Azure.BlobStorage.csproj" />
-    <ProjectReference Include="..\Marain.TenantManagement.Azure.Cosmos\Marain.TenantManagement.Azure.Cosmos.csproj" />
-    <ProjectReference Include="..\Marain.TenantManagement.Azure.TableStorage\Marain.TenantManagement.Azure.TableStorage.csproj" />
-  </ItemGroup>
+  
   <ItemGroup>
     <None Update="specflow.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Update="Features\ServiceManifests\Validation\RequiredLegacyV2ConfigurationValidation.feature.cs">
-      <DependentUpon>RequiredLegacyV2ConfigurationValidation.feature</DependentUpon>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <SpecFlowFeatureFiles Update="Features\Enrollment\RequiredConfiguration\EnrollSupplyingWrongConfiguration.feature">
-      <Visible>$(UsingMicrosoftNETSdk)</Visible>
-      <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
-    </SpecFlowFeatureFiles>
-    <SpecFlowFeatureFiles Update="Features\Enrollment\RequiredConfiguration\Legacy\EnrollV2OrV3RequiredWithV2OrV3RequiredDependency.feature">
-      <Visible>$(UsingMicrosoftNETSdk)</Visible>
-      <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
-    </SpecFlowFeatureFiles>
-    <SpecFlowFeatureFiles Update="Features\Enrollment\RequiredConfiguration\Legacy\EnrollV2OrV3RequiredWithV2RequiredDependency.feature">
-      <Visible>$(UsingMicrosoftNETSdk)</Visible>
-      <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
-    </SpecFlowFeatureFiles>
-    <SpecFlowFeatureFiles Update="Features\Enrollment\RequiredConfiguration\Legacy\EnrollV2OrV3RequiredWithV3RequiredDependency.feature">
-      <Visible>$(UsingMicrosoftNETSdk)</Visible>
-      <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
-    </SpecFlowFeatureFiles>
-    <SpecFlowFeatureFiles Update="Features\ServiceManifests\Validation\DependentServiceValidation.feature">
-      <Visible>$(UsingMicrosoftNETSdk)</Visible>
-      <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
-    </SpecFlowFeatureFiles>
-    <SpecFlowFeatureFiles Update="Features\ServiceManifests\Validation\RequiredLegacyV2ConfigurationValidation.feature">
-      <Visible>$(UsingMicrosoftNETSdk)</Visible>
-      <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
-    </SpecFlowFeatureFiles>
-    <SpecFlowFeatureFiles Update="Features\ServiceManifests\Validation\RequiredConfigurationValidation.feature">
-      <Visible>$(UsingMicrosoftNETSdk)</Visible>
-      <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
-    </SpecFlowFeatureFiles>
   </ItemGroup>
 </Project>
