Enrollment config now single object
We had changed it from a list to a dictionary, but it was invariably a single-entry dictionary keyed on the service id, and we already know the service id, so we don't need that wrapper.

Enable enrollment configuration to specify the service display name for readability and sanity checking

--- a/Solutions/Marain.TenantManagement.Azure.TableStorage/Marain.TenantManagement.Azure.TableStorage.csproj
+++ b/Solutions/Marain.TenantManagement.Azure.TableStorage/Marain.TenantManagement.Azure.TableStorage.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="$(EndjinProjectPropsPath)" Condition="$(EndjinProjectPropsPath) != ''" />
 
@@ -17,7 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="Corvus.Storage.Azure.TableStorage.Tenancy" Version="3.2.0" />
-    <PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.0">
+    <PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
