--- a/Solutions/Marain.TenantManagement.Specs/Data/ServiceManifests/ManifestWithConfiguration.jsonc
+++ b/Solutions/Marain.TenantManagement.Specs/Data/ServiceManifests/ManifestWithConfiguration.jsonc
@@ -5,7 +5,7 @@
   "requiredConfigurationEntries": [
     {
       "contentType": "application/vnd.marain.tenancy.servicemanifests.requiredconfigurationentries.azureblobstorage.v3",
-      "key": "MarainOperations:BlobContainerConfiguration:operations",
+      "key": "Marain:Operations:BlobContainerConfiguration:Operations",
       "description": "Stores the status of all current operations"
     }
   ]
