--- a/Solutions/Marain.TenantManagement.Specs/Data/ServiceManifests/ManifestWithMultipleConfigurationItems.jsonc
+++ b/Solutions/Marain.TenantManagement.Specs/Data/ServiceManifests/ManifestWithMultipleConfigurationItems.jsonc
@@ -5,17 +5,17 @@
   "requiredConfigurationEntries": [
     {
       "contentType": "application/vnd.marain.tenancy.servicemanifests.requiredconfigurationentries.azureblobstorage.v3",
-      "key": "MarainOperations:BlobContainerConfiguration:operations",
+      "key": "Marain:Operations:BlobContainerConfiguration:Operations",
       "description": "Stores the status of all current operations"
     },
     {
       "contentType": "application/vnd.marain.tenancy.servicemanifests.requiredconfigurationentries.cosmosdb.v3",
-      "key": "MarainWorkflow:CosmosContainerConfiguration:definitions",
-      "description": "Workflow definitions"
+      "key": "Marain:Workflow:CosmosContainerConfiguration:Instances",
+      "description": "Workflow instances"
     },
     {
       "contentType": "application/vnd.marain.tenancy.servicemanifests.requiredconfigurationentries.azuretablestorage.v3",
-      "key": "MarainWorkflow:BlobContainerConfiguration:AuditLogs",
+      "key": "Marain:Workflow:TableStorageConfiguration:AuditLogs",
       "description": "Stores audit logs"
     }
   ]
