--- a/Solutions/Marain.TenantManagement.Azure.TableStorage/Marain.TenantManagement.Azure.TableStorage.csproj
+++ b/Solutions/Marain.TenantManagement.Azure.TableStorage/Marain.TenantManagement.Azure.TableStorage.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="$(EndjinProjectPropsPath)" Condition="$(EndjinProjectPropsPath) != ''" />
 
@@ -17,7 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="Corvus.Storage.Azure.TableStorage.Tenancy" Version="3.2.0" />
-    <PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.1">
+    <PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
