--- a/Solutions/Marain.TenantManagement.Specs/Data/ServiceManifests/ManifestWithConfigurationWithUnknownContentType.jsonc
+++ b/Solutions/Marain.TenantManagement.Specs/Data/ServiceManifests/ManifestWithConfigurationWithUnknownContentType.jsonc
@@ -1,5 +1,5 @@
 {
-  "contentType": "application/vnd.marain.tenancy.servicemanifests.servicemanifest.v3",
+  "contentType": "application/vnd.marain.tenancy.servicemanifests.servicemanifest",
   "wellKnownTenantGuid": "b31b64fd-69a5-4da0-8e30-88812f3a45ba",
   "serviceName": "Manifest with configuration with unknown content type.",
   "requiredConfigurationEntries": [
