--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,10 +11,11 @@ resources:
     - repository: recommended_practices
       type: github
       name: endjin/Endjin.RecommendedPractices.AzureDevopsPipelines.GitHub
-      endpoint: marain-github
+      endpoint: marain-dotnet-github
+
 
 jobs:
-- template: templates/build.and.release.yml@recommended_practices
+- template: templates/build.and.release.scripted.yml@recommended_practices
   parameters:
     vmImage: 'ubuntu-latest'
     service_connection_nuget_org: $(Endjin_Service_Connection_NuGet_Org)
@@ -30,4 +31,7 @@ jobs:
           ENDJIN_AZURESERVICESAUTHCONNECTIONSTRING: $(Endjin_AzureServicesAuthConnectionString)
           ENDJIN_TENANCYSERVICEBASEURI: $(Endjin_TenancyServiceBaseUri)
           ENDJIN_TENANCYSERVICERESOUCEIDFORMSIAUTHENTICATION: $(Endjin_TenancyServiceResourceIdForMsiAuthentication)
-    netSdkVersion: '3.x'
+    netSdkVersion: '6.x'
+    additionalNetSdkVersions: 
+    - '3.x'
+    compileTasksServiceConnection: endjin-acr-reader 
