--- a/Solutions/Marain.TenantManagement.Azure.TableStorage/Marain.TenantManagement.Azure.TableStorage.csproj
+++ b/Solutions/Marain.TenantManagement.Azure.TableStorage/Marain.TenantManagement.Azure.TableStorage.csproj
@@ -16,8 +16,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Corvus.Storage.Azure.TableStorage.Tenancy" Version="3.4.0-PullRequest0448.9" />
-    <PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.2">
+    <PackageReference Include="Corvus.Storage.Azure.TableStorage.Tenancy" Version="3.4.0" />
+    <PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
