Update Menes and recommended practices
Fix some new nullability warnings that emerged as a result of upgrading Menes (which picks up the nullability-aware Json.NET).

--- a/Solutions/EnrollmentConfigurations/OperationsConfigForStorageEmulator.json
+++ b/Solutions/EnrollmentConfigurations/OperationsConfigForStorageEmulator.json
@@ -4,7 +4,7 @@
     "Marain:Operations:BlobContainerConfiguration:Operations": {
       "contentType": "application/vnd.marain.tenancy.configurationitem.azureblobstorage.v3",
       "configuration": {
-        "accountName": "",
+        "connectionStringPlainText": "UseDevelopmentStorage=true",
         "container": "operations"
       }
     }
