--- a/Solutions/Marain.TenantManagement.Specs/Data/ServiceManifests/LegacyV2/SvcC1V2D(C1V2D()).jsonc
+++ b/Solutions/Marain.TenantManagement.Specs/Data/ServiceManifests/LegacyV2/SvcC1V2D(C1V2D()).jsonc
@@ -12,7 +12,10 @@
   "requiredConfigurationEntries": [
     {
       "contentType": "application/vnd.marain.tenancy.servicemanifests.requiredconfigurationentries.azureblobstorage",
-      "key": "mycontainer",
+      "key": "container",
+      "containerDefinition": {
+        "containerName": "mycontainer"
+      },
       "description": "Stores blobs"
     }
   ]
