--- a/Solutions/Marain.TenantManagement.Specs/Data/ServiceManifests/LegacyV2/SvcC1V2D().jsonc
+++ b/Solutions/Marain.TenantManagement.Specs/Data/ServiceManifests/LegacyV2/SvcC1V2D().jsonc
@@ -6,7 +6,10 @@
   "requiredConfigurationEntries": [
     {
       "contentType": "application/vnd.marain.tenancy.servicemanifests.requiredconfigurationentries.azureblobstorage",
-      "key": "StorageConfiguration__mycontainer",
+      "key": "container",
+      "containerDefinition": {
+        "containerName": "mycontainer"
+      },
       "description": "Stores blobs"
     }
   ]
