--- a/Solutions/Marain.TenantManagement.Specs/Data/ServiceManifests/LegacyV2/SvcC3V2D().jsonc
+++ b/Solutions/Marain.TenantManagement.Specs/Data/ServiceManifests/LegacyV2/SvcC3V2D().jsonc
@@ -6,17 +6,27 @@
   "requiredConfigurationEntries": [
     {
       "contentType": "application/vnd.marain.tenancy.servicemanifests.requiredconfigurationentries.azureblobstorage",
-      "key": "StorageConfiguration__mycontainer",
+      "key": "blobcontainer",
+      "containerDefinition": {
+        "containerName": "mycontainer"
+      },
       "description": "Stores blobs"
     },
     {
       "contentType": "application/vnd.marain.tenancy.servicemanifests.requiredconfigurationentries.cosmosdb",
-      "key": "StorageConfiguration__mydb__mycontainer",
+      "key": "cosmoscontainer",
+      "containerDefinition": {
+        "databaseName": "mydb",
+        "containerName": "mycontainer"
+      },
       "description": "Stores docs"
     },
     {
       "contentType": "application/vnd.marain.tenancy.servicemanifests.requiredconfigurationentries.azuretablestorage",
-      "key": "StorageConfiguration__mytable",
+      "key": "table",
+      "containerDefinition": {
+        "tableName": "mytable"
+      },
       "description": "Stores rows"
     }
   ]
